--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scene Snipe</title>
-    <link rel="icon" type="image/x-icon" href="https://static.thenounproject.com/png/1730291-200.png">
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -217,14 +217,14 @@
         <div class="content pt-28 pb-14 px-12">
             <div class="home-header fade-in">
                 <div class="logo-left">
-                    <img src="SceneSnipe-BGRemove.png" alt="Elegant circular logo in deep magenta and white, featuring intertwined film strips and a central camera aperture symbolizing precision and artistry in filmmaking for Scene Snipe" class="w-28 h-28 rounded-full border-4 border-pink-500 shadow-2xl drop-shadow-lg dynamic-glow">
+                    <img src="SceneSnipe.png" alt="Elegant circular logo in deep magenta and white, featuring intertwined film strips and a central camera aperture symbolizing precision and artistry in filmmaking for Scene Snipe" class="w-32 h-32 rounded-full border-4 border-pink-500 shadow-2xl drop-shadow-lg dynamic-glow">
                 </div>
                 <div class="titles">
                     <h1 class="text-7xl font-bold bg-gradient-to-r from-pink-400 via-purple-500 to-blue-500 bg-clip-text text-transparent drop-shadow-xl">Scene Snipe</h1>
                     <p class="mt-6 text-3xl text-gray-300 italic font-light">Aim. Shoot. Steal the Scene.</p>
                 </div>
                 <div class="logo-right">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/5de5ee29-5e93-4b8b-8cc6-535016d5d1e9.png" alt="Sophisticated round emblem in azure blue and white, depicting a stylized camera lens with layered film reels, representing advanced cinematic technology and event innovation for Scene Snipe" class="w-28 h-28 rounded-full border-4 border-blue-500 shadow-2xl drop-shadow-lg dynamic-glow">
+                    <img src="logo.png" alt="Sophisticated round emblem in azure blue and white, depicting a stylized camera lens with layered film reels, representing advanced cinematic technology and event innovation for Scene Snipe" class="w-32 h-32 rounded-full border-4 border-blue-500 shadow-2xl drop-shadow-lg dynamic-glow">
                 </div>
             </div>
         </div>
@@ -234,8 +234,8 @@
     <section id="trailer">
         <div class="content py-24 px-12 text-center fade-in">
             <h2 class="text-5xl font-semibold mb-12 text-pink-400 drop-shadow-md">Watch the Official Trailer</h2>
-            <video controls class="max-w-full h-auto rounded-3xl shadow-2xl mx-auto border-2 border-gray-600 dynamic-glow hover:scale-105 transition-transform duration-500" poster="SceneSnipe.png" style="max-width: 500px;">
-                <source src="demo.mp4" type="video/mp4">
+            <video controls class="max-w-full h-auto rounded-3xl shadow-2xl mx-auto border-2 border-gray-600 dynamic-glow hover:scale-105 transition-transform duration-500" poster="SceneSnipe.png" style="max-width: 400px;">
+                <source src="Final-Trailer-CodenameSS.mp4" type="video/mp4">
                 Your browser does not support the video tag. Please update to enjoy the trailer.
             </video>
         </div>
